# Checkmate-Escrow

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  PR_MESSAGE.md  README.md  TODO.md  environments.toml  issues.md  issues2.md  issues3.md
contracts/escrow/: Cargo.toml
contracts/escrow/src/: errors.rs  lib.rs  tests.rs  types.rs
contracts/escrow/test_snapshots/tests/: test_admin_unpause_allows_create_match.1.json  test_cancel_active_match_fails_with_invalid_state.1.json  test_cancel_both_deposited_active_returns_invalid_state.1.json  test_cancel_completed_match_returns_invalid_state.1.json  test_cancel_match_emits_event.1.json  test_cancel_only_player1_deposited_refunds_player1.1.json  test_cancel_only_player2_deposited_refunds_player2.1.json  test_cancel_refunds_deposit.1.json  test_create_match.1.json  test_create_match_emits_event.1.json  test_create_match_sets_created_ledger.1.json  test_create_match_with_allowed_token_succeeds.1.json  test_create_match_with_disallowed_token_fails.1.json  test_deposit_and_activate.1.json  test_deposit_emits_activated_event.1.json  test_deposit_into_cancelled_match_returns_match_cancelled.1.json  test_deposit_into_completed_match_returns_invalid_state.1.json  test_deposit_into_completed_match_returns_match_completed.1.json  test_draw_refund.1.json  test_duplicate_game_id_rejected.1.json  test_is_allowed_token_returns_correct_state.1.json  test_is_funded_returns_false_on_fresh_match.1.json  test_non_admin_cannot_add_allowed_token.1.json  (+18 more)
contracts/oracle/: Cargo.toml
contracts/oracle/src/: errors.rs  lib.rs  types.rs
(+14 files in other folders)
