[package]
name = "escrow"
version = "0.1.0"
edition = "2021"
description = "Trustless chess wagering escrow contract on Stellar Soroban"
repository = "https://github.com/StellarCheckMate/Checkmate-Escrow"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.7.5"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
oracle = { path = "../oracle" }
quickcheck = "1.0"
quickcheck_macros = "1.0"
